--- a/src/main/resources/templates/upload_form.html
+++ b/src/main/resources/templates/upload_form.html
@@ -13,8 +13,21 @@
     <div>
         <form method="POST" enctype="multipart/form-data" action="/Files/">
             <table>
-                <tr><td>File to upload:</td><td><input type="file" name="file" /></td></tr>
-                <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
+                <tr>
+                    <td>
+                        <th:block th:text='${T(com.smanager.Bundles).getMessage("file", "fileToUpload")}'></th:block>:
+                    </td>
+                    <td>
+                        <input type="file" name="file" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                    </td>
+                    <td>
+                        <input type="submit" value="Upload" />
+                    </td>
+                </tr>
             </table>
         </form>
     </div>
