--- a/src/main/resources/templates/courseStudentRegister_form.html
+++ b/src/main/resources/templates/courseStudentRegister_form.html
@@ -10,7 +10,9 @@
 
 <form action="#" th:action="@{/Course/Register}" th:object="${mapping}" enctype="multipart/form-data" method="post">
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Course:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "course")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <select th:field="*{course}" class="form-control">
                 <option th:each="cour : ${courses}" th:value="${cour.getId()}"
@@ -21,7 +23,9 @@
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Student:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "student")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <select th:field="*{student}" class="form-control">
                 <option th:each="st : ${students}" th:value="${st.getId()}"
@@ -33,7 +37,9 @@
     </div>
     <div class="form-group row">
         <div class="col-sm-6">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">
+                <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "submit")}'></th:block>
+            </button>
         </div>
     </div>
 </form>
