--- a/src/main/resources/templates/course_form.html
+++ b/src/main/resources/templates/course_form.html
@@ -11,21 +11,27 @@
 <form action="#" th:action="${isCreate} ? @{/Course/Create} : @{/Course/Edit}" th:object="${course}" method="post">
     <input type="hidden" th:field="*{id}">
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Title:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "title")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <input type="text" th:field="*{title}" class="form-control"/>
             <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="text-danger">Title error</p>
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">ECTS:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registerToCourse")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <input type="number" th:field="*{ects}" class="form-control"/>
         </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-6">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">
+                <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "submit")}'></th:block>
+            </button>
         </div>
     </div>
 </form>
