--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -12,19 +12,25 @@
     <input type="hidden" th:field="*{id}">
     <input type="hidden" th:field="*{creationDate}">
     <div class="form-group row">
-        <label for="titleInput" class="col-sm-2 col-form-label">Content:</label>
+        <label for="titleInput" class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "content")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <input type="text" id="titleInput" th:field="*{content}" class="form-control"/>
         </div>
     </div>
     <div class="form-group row">
-        <label for="isFinished" class="col-sm-2 col-form-label">Finished:</label>
+        <label for="isFinished" class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "finished")}'></th:block>:
+        </label>
         <div class="form-check">
             <input type="checkbox" id="isFinished" th:field="*{finished}" class="form-control"/>
         </div>
     </div>
     <div th:if="${!user.isStudent()}" class="form-group row">
-        <label class="col-sm-2 col-form-label">Grade:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "grade")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <select th:field="*{grade}" class="form-control">
                 <option th:each="gr : ${grades}" th:value="${gr.getGrade()}"
@@ -38,7 +44,9 @@
         <input type="hidden" th:field="*{grade}">
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Student:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "student")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <select th:field="*{student}" class="form-control">
                 <option th:each="st : ${students}" th:value="${st.getId()}"
@@ -49,7 +57,9 @@
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Assignment:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "assignment")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <select th:field="*{assignment}" class="form-control">
                 <option th:each="as : ${assignments}" th:value="${as.getId()}"
@@ -60,14 +70,18 @@
         </div>
     </div>
     <div class="form-group row">
-        <label class="col-sm-2 col-form-label">Attachment:</label>
+        <label class="col-sm-2 col-form-label">
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "attachment")}'></th:block>:
+        </label>
         <div class="col-sm-6">
             <input type="file" name="file" class="form-control-file"/>
         </div>
     </div>
     <div class="form-group row">
         <div class="col-sm-6">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">
+                <th:block th:text='${T(com.smanager.Bundles).getMessage("solution", "submit")}'></th:block>
+            </button>
         </div>
     </div>
 </form>
