--- a/src/main/resources/templates/work_index_teacher.html
+++ b/src/main/resources/templates/work_index_teacher.html
@@ -20,7 +20,9 @@
                 <div class="list-group-item">
                     <p th:utext="${assignment}"></p>
                     <button class="btn btn-primary" type="button" data-toggle="collapse" th:href="'#solutions-container-' + ${i.count}"
-                            role="button" aria-controls="'solutions-container-' + ${i.count}">Show solutions</button>
+                            role="button" aria-controls="'solutions-container-' + ${i.count}">
+                        <th:block th:text='${T(com.smanager.Bundles).getMessage("work", "showSolutions")}'></th:block>
+                    </button>
                     <div class="collapse" th:id="'solutions-container-' + ${i.count}">
                         <th:block th:each="solution : ${assignmentsSolutions.get(assignment)}">
                             <div class="list-group-item">
