--- a/src/main/resources/templates/course_index.html
+++ b/src/main/resources/templates/course_index.html
@@ -8,11 +8,13 @@
 <body>
 <div th:insert="header_user :: header(user=${user})"></div>
 <div class="btn-group">
-    <a href="/Course/Create">
-        <button type="button" class="btn btn-primary btn-sm">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "create")}'></th:block>
-        </button>
-    </a>
+    <div th:if="${!user.isStudent()}">
+        <a href="/Course/Create">
+            <button type="button" class="btn btn-primary btn-sm">
+                <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "create")}'></th:block>
+            </button>
+        </a>
+    </div>
     <a href="/Course/Register">
         <button type="button" class="btn btn-primary btn-sm">
             <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registerToCourse")}'></th:block>
