--- a/src/main/resources/templates/work_index_teacher.html
+++ b/src/main/resources/templates/work_index_teacher.html
@@ -19,11 +19,11 @@
             <th:block th:each="assignment, i : ${courseAssignments.get(course)}">
                 <div class="list-group-item">
                     <p th:utext="${assignment}"></p>
-                    <button class="btn btn-primary" type="button" data-toggle="collapse" th:href="'#solutions-container-' + ${i.count}"
-                            role="button" aria-controls="'solutions-container-' + ${i.count}">
+                    <button class="btn btn-primary" type="button" data-toggle="collapse" th:href="'#solutions-container-' + ${assignment.getId()} + '-' + ${i.count}"
+                            role="button" aria-controls="'solutions-container-' + ${assignment.getId()} + '-' + ${i.count}">
                         <th:block th:text='${T(com.smanager.Bundles).getMessage("work", "showSolutions")}'></th:block>
                     </button>
-                    <div class="collapse" th:id="'solutions-container-' + ${i.count}">
+                    <div class="collapse" th:id="'solutions-container-' + ${assignment.getId()} + '-' + ${i.count}">
                         <th:block th:each="solution : ${assignmentsSolutions.get(assignment)}">
                             <div class="list-group-item">
                                 <div th:insert="solution_fragment :: div_view(solution=${solution}, user=${user})"></div>
