--- a/src/main/resources/templates/course_form.html
+++ b/src/main/resources/templates/course_form.html
@@ -21,7 +21,7 @@
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">
-            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "registerToCourse")}'></th:block>:
+            <th:block th:text='${T(com.smanager.Bundles).getMessage("course", "ects")}'></th:block>:
         </label>
         <div class="col-sm-6">
             <input type="number" th:field="*{ects}" class="form-control"/>
