--- a/src/main/resources/templates/home_index.html
+++ b/src/main/resources/templates/home_index.html
@@ -6,7 +6,8 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header_user :: header(user=${user})"></div>
+<div th:if="${isLogged}" th:insert="header_user :: header(user=${user})"></div>
+<div th:unless="${isLogged}" th:insert="header :: header"></div>
     <p th:utext="${user}">
         <th:block th:text='${T(com.smanager.Bundles).getMessage("home", "loggedAs")}'></th:block>:
     </p>
